# password-manager

./: .gitignore  README.md  extract_har.py
client/: CMakeLists.txt
client/src/: main.cpp
client/src/domain/: ClipboardManager.cpp  ClipboardManager.h  EntryService.cpp  EntryService.h  PasswordGenerator.cpp  PasswordGenerator.h  VaultManager.cpp  VaultManager.h
client/src/network/: ApiClient.cpp  ApiClient.h  AuthCallbackServer.cpp  AuthCallbackServer.h
client/src/qml/: main.qml
client/src/security/: CryptoManager.cpp  CryptoManager.h  KeyDerivationService.cpp  KeyDerivationService.h
client/src/storage/: DatabaseManager.cpp  DatabaseManager.h
client/tests/: test_pwdgen.cpp
extracted_assets/: css2  gtm.js  index.html  main-G7DM3GWU.js  styles-7KLEMMT6.css
extracted_assets/glue/cookienotificationbar/: cookienotificationbar.min.css  cookienotificationbar.min.js
extracted_assets/glue/cookienotificationbar/config/: 2a.json
server/: dev.db  package-lock.json  package.json  test-prisma.js
server/prisma/: schema.prisma
server/src/: app.module.ts  prisma.service.ts
server/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts
server/src/users/: users.service.ts
server/src/vault/: vault.controller.ts  vault.module.ts  vault.service.ts
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
